# ComfyUI-Omnivoice

./: README.md  __init__.py  conftest.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  epub_loader.py  generator.py  loader.py  mix_voices.py  multi_speaker.py  voice_design.py  voice_presets.py
tests/: conftest.py  test_epub_loader.py  test_generator.py  test_loader.py
web/: multi_speaker.js
workflows/: omnivoice_voice_cloning.json  voice_cloning.json
