[project]
name = "comfyui-omnivoice-fel"
description = "ComfyUI nodes for OmniVoice — multilingual zero-shot TTS with voice cloning, voice design, EPUB loading, and voice mixing."
version = "1.0.0"
license = { text = "GPL-3.0-only" }
dependencies = []

[project.urls]
Repository = "https://github.com/ethanfel/ComfyUI-Omnivoice"

[tool.comfy]
PublisherId = "ethanfel"
DisplayName = "ComfyUI-Omnivoice"
Icon = ""
